# AoC2024

./: .gitignore  readme.md
day4/: dune-project
shared/: dune-project  shared.opam
shared/test/: dune  test.ml
