(lang dune 3.17)

(name shared)

(generate_opam_files true)

(source
 (github benkol003/AoC2024))

(authors "Author Name <benjkollar03@gmail.com>")

(maintainers "Maintainer Name <benjkollar03@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name shared)
 (synopsis "Advent of Code 2024")
 (description "Solutions for the Advent of code 2024")
 (depends ocaml)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
